--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,4 +12,4 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload", "--reload-dir", "/usr/src/app/app"]
